overflow issue fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,21 +21,27 @@ body {
     background-color: var(--background-colour);
     color: var(--text-colour);
     height: 100%;
-
 }
 
 #events {
     display: flex;
     flex-wrap: wrap;
+    margin: -10px; /* Compensate for margin on the columns */
 }
 
-#events .col-3 {
+.event-container {
     flex: 0 0 calc(25% - 20px); /* 25% width with 20px margin */
     margin: 10px;
+    box-sizing: border-box; /* Include padding and border in the box sizing calculation */
+    /* Set border styles */
+    border: 2px solid white; /* You can adjust the width (2px) as needed */
+    border-radius: 8px; /* Optional: Add border-radius for rounded corners */
 }
 
+
+/* Responsive styles for smaller screens */
 @media (max-width: 768px) {
-    #events .col-3 {
+    .event-container {
         flex: 0 0 calc(50% - 20px); /* 50% width on smaller screens */
     }
 }
@@ -59,6 +65,8 @@ body {
             linear-gradient(127deg, rgba(0,255,0,0.5), rgba(0,255,0,0) 70.71%),
             linear-gradient(336deg, rgba(0,0,255,0.5), rgba(0,0,255,0) 70.71%);
     border-radius: 20px;   
+    max-width: 100%;
+    overflow: auto;
 }
 
 .customLabel {
